crates/runtime-datafusion/src/analyzer_rule/snapshots/runtime_datafusion__analyzer_rule__partitioned_table_scan_rewrite__tests__limit_sort_pushdown.snap
---
source: crates/runtime-datafusion/src/analyzer_rule/partitioned_table_scan_rewrite.rs
expression: formatted
---
Limit: skip=0, fetch=5
  Sort: test_table.id ASC NULLS LAST
    SubqueryAlias: test_table
      Union
        Sort: test_table.id ASC NULLS LAST, fetch=5
          TableScan: test_table, unsupported_filters=[partition_id = Utf8("0")]
        Sort: test_table.id ASC NULLS LAST, fetch=5
          TableScan: test_table, unsupported_filters=[partition_id = Utf8("1")]
