crates/runtime-datafusion/src/analyzer_rule/snapshots/runtime_datafusion__analyzer_rule__partitioned_table_scan_rewrite__tests__limit_without_sort_no_pushdown.snap
---
source: crates/runtime-datafusion/src/analyzer_rule/partitioned_table_scan_rewrite.rs
expression: result.display_indent()
---
Limit: skip=0, fetch=5
  SubqueryAlias: test_table
    Union
      TableScan: test_table, unsupported_filters=[partition_id = Utf8("0")]
      TableScan: test_table, unsupported_filters=[partition_id = Utf8("1")]
